<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/btnDelete"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/bg_button_edit">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tags"
            android:src="@drawable/ic_delete_white"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textColor="@color/white"
            android:text="@string/text_eliminar"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnChat"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/bg_button_edit">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tags"
            android:src="@drawable/ic_swap_horiz_purple_24dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textColor="@color/white"
            android:text="@string/text_cambiar"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnEdit"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/bg_button_edit">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/tags"
        android:src="@drawable/ic_edit_black_24dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="3dp"
        android:text="@string/text_edit"
        android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:visibility="gone"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/bg_button_edit">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tags"
            android:src="@drawable/ic_camera_alt_white_24dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="3dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</LinearLayout>