<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="1dp"
        app:cardCornerRadius="3dp" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/bagImage"
                android:layout_width="80dp"
                android:contentDescription="@string/tags"
                android:layout_height="match_parent"
                android:src="@raw/img_bag7"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".7">

                        <zuzusoft.com.bagbag.helper.custom_views.CustomFontTextView
                            android:id="@+id/ownerName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            android:text="@string/brandName"
                            android:drawablePadding="8dp"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:drawableEnd="@drawable/ic_online_16dp"
                            android:textColor="@color/black_de"
                            app:fontName="Roboto_Bold"
                            android:layout_gravity="start" />

                    </FrameLayout>

                    <com.github.curioustechizen.ago.RelativeTimeTextView
                        android:id="@+id/messageTime"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".3"
                        android:textSize="12sp"
                        android:layout_marginEnd="10dp"
                        android:gravity="end"
                        android:text="@string/text_chat_time"
                        android:textStyle="normal"
                        app:fontName="Roboto_Regular"
                        android:layout_gravity="start" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <zuzusoft.com.bagbag.helper.custom_views.CustomFontTextView
                        android:id="@+id/lastMessage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".9"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/text_chat_message"
                        android:textColor="@color/album_title"
                        app:fontName="Roboto_Regular"
                        android:layout_gravity="start" />


                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".2">

                        <zuzusoft.com.bagbag.helper.badge.MaterialBadgeTextView
                            android:id="@+id/chatCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:visibility="gone"
                            android:layout_gravity="end|center_vertical"
                            android:background="#427fed"
                            android:textColor="@android:color/white"
                            android:text="@string/text_chat_count" />

                    </FrameLayout>

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>