<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profileImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_person_purple_64dp"
                app:civ_border_color="#FFFFFFFF"
                app:civ_border_width="0dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <zuzusoft.com.bagbag.helper.custom_views.CustomFontTextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:ellipsize="end"
                    android:maxLength="12"
                    android:maxLines="1"
                    android:text="@string/text_username"
                    android:textColor="@color/black_de"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:fontName="Roboto_Bold" />

                <zuzusoft.com.bagbag.helper.custom_views.CustomFontTextView
                    android:id="@+id/hashTagName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:maxLength="12"
                    android:text="@string/text_hashtag_username"
                    android:textColor="@color/colorNavAccentSelected"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    app:fontName="Roboto_Regular" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="15dp">

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/tags"
                        android:src="@drawable/bag" />

                    <zuzusoft.com.bagbag.helper.custom_views.CustomFontTextView
                        android:id="@+id/bagCount"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        app:fontName="Roboto_Regular" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/btnAddBag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="25dp"
                android:background="@drawable/bg_button_register"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_add_circle_outline_white_24dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/text_add_bag"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/bagList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null">

            </ListView>

        </android.support.v4.widget.SwipeRefreshLayout>

        <LinearLayout
            android:id="@+id/emptyView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <zuzusoft.com.bagbag.helper.custom_views.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/my_closet_empty"
                android:textColor="@color/colorNavAccentSelected"
                android:textSize="20sp"
                android:textStyle="normal"
                app:fontName="Roboto_Bold" />

            <zuzusoft.com.bagbag.helper.custom_views.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_bag_text"
                android:textColor="@color/violet_thin"
                android:textSize="13sp"
                android:textStyle="normal"
                app:fontName="Roboto_Regular" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>